Add Rules endpoint and own abort implementation
